--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mm.minesweepergo.minesweepergo">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -29,7 +28,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,8 +49,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity
-            android:name=".UserPanelActivity">
+        <activity android:name=".UserPanelActivity">
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -98,9 +97,10 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.mm.minesweepergo.minesweepergo.NOTIFICATION"/>
+                <action android:name="com.mm.minesweepergo.minesweepergo.NOTIFICATION" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
