--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" />
-        android:parentActivityName=".MainActivity" />
+        <activity android:name=".RegisterActivity"
+            android:parentActivityName=".MainActivity">
+                <meta-data
+                  android:name="android.support.PARENT_ACTIVITY"
+                 android:value="com.mm.minesweepergo.minesweepergo.MainActivity" />
+           </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
