--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,11 +109,11 @@
         <activity
             android:name=".MinesSetActivity"
             android:label="Match"
-            android:parentActivityName=".UsersMapActivity"
+            android:parentActivityName=".ArenaActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mm.minesweepergo.minesweepergo.UsersMapActivity" />
+                android:value="com.mm.minesweepergo.minesweepergo.ArenaActivity" />
             >
         </activity>
 
