--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,7 +115,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mm.minesweepergo.minesweepergo.ArenaActivity" />
         </activity>
-
         <activity
             android:name=".ArenaActivity"
             android:label="Arena"
@@ -125,8 +124,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mm.minesweepergo.minesweepergo.UsersMapActivity" />
         </activity>
-
-        <activity android:name=".MinesSearchActivity"
+        <activity
+            android:name=".MinesSearchActivity"
             android:label="Game"
             android:parentActivityName=".ArenaActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -134,6 +133,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mm.minesweepergo.minesweepergo.ArenaActivity" />
         </activity>
+
+        <activity
+            android:name=".ScoreboardActivity"
+            android:label="Scoreboard"
+            android:parentActivityName=".UsersMapActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mm.minesweepergo.minesweepergo.UsersMapActivity" />
+        </activity>
+
+
     </application>
 
 </manifest>
